[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "CLI-based background job queue system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
queuectl = "queuectl.cli:cli"
